# docs-linter

./: .docs-linter.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: bad.md  good.md
src/docs_linter/: __init__.py  cli.py  config.py  linter.py
src/docs_linter/parsers/: __init__.py  markdown.py
src/docs_linter/reporters/: __init__.py  json_reporter.py  terminal.py
src/docs_linter/rules/: __init__.py  base.py  click_here.py  doubled_words.py  future_tense.py  heading_style.py  no_first_person.py  passive_voice.py  permissive_language.py  placeholder_text.py  sentence_length.py  weasel_words.py
tests/: test_cli.py  test_parser.py
tests/test_rules/: test_doubled_words.py  test_future_tense.py  test_passive_voice.py  test_permissive_language.py  test_weasel_words.py
