[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-linter"
version = "0.1.0"
description = "A configurable style linter for technical documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Henry Tam"}]
keywords = ["documentation", "linting", "style", "markdown", "technical-writing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dita = ["lxml>=4.9"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
docs-linter = "docs_linter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
